--- a/export_tensorflow.ipynb
+++ b/export_tensorflow.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING! VTK not available. This might limit the functionality.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras import models\n",
-    "import utils\n",
+    "from cgmcore import utils\n",
     "from keras import backend as K\n",
     "from tensorflow import saved_model\n",
     "from tensorflow.python.saved_model import builder as saved_model_builder\n",
@@ -26,38 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model...\n",
-      "20180804-0930-voxnet-model.h5\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "reshape_1 (Reshape)          (None, 32, 32, 32, 1)     0         \n",
-      "_________________________________________________________________\n",
-      "conv3d_1 (Conv3D)            (None, 14, 14, 14, 32)    4032      \n",
-      "_________________________________________________________________\n",
-      "conv3d_2 (Conv3D)            (None, 12, 12, 12, 32)    27680     \n",
-      "_________________________________________________________________\n",
-      "max_pooling3d_1 (MaxPooling3 (None, 6, 6, 6, 32)       0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 6912)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               884864    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 258       \n",
-      "=================================================================\n",
-      "Total params: 916,834\n",
-      "Trainable params: 916,834\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "\n",
-      "Done.\n"
+      "Loading model...\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "No models found for filter  at path /home/jupyter-mmatiaschek/cgm-ml/voxnet",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-2d8e7d5b5b2b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Loading model...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel_name_voxnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_latest_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"voxnet\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mmodel_name_voxnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"20180804-0930-voxnet-model.h5\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_name_voxnet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/cgm-ml/cgmcore/utils.py\u001b[0m in \u001b[0;36mget_latest_model\u001b[0;34m(path, filter)\u001b[0m\n\u001b[1;32m    172\u001b[0m     \u001b[0mpaths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglob_search_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfilter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaths\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No models found for filter \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfilter\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" at path \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: No models found for filter  at path /home/jupyter-mmatiaschek/cgm-ml/voxnet"
      ]
     }
    ],
