Preprocessing. Refactoring. Documentation.

--- a/export_tensorflow.ipynb
+++ b/export_tensorflow.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converts a model to TF.\n",
+    "Shows how to convert a model to TF. Aim would be to deploy the model to a smart-device. On most other devices, this would not be necessary. Assuming that Keras would work on those devices."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -21,7 +29,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save the model."
+    "# Load the model.\n",
+    "Loads the Keras model."
    ]
   },
   {
@@ -78,7 +87,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save the model."
+    "# Save the model.\n",
+    "Converts the Keras-model to TF and saves it."
    ]
   },
   {
