--- a/analyze_nets.ipynb
+++ b/analyze_nets.ipynb
@@ -6,10 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'datagenerator'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-1ac7d23cfad3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdatagenerator\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataGenerator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'datagenerator'"
      ]
     }
    ],
@@ -33,54 +37,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading models...\n",
-      "20180804-0930-voxnet-model.h5\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "reshape_1 (Reshape)          (None, 32, 32, 32, 1)     0         \n",
-      "_________________________________________________________________\n",
-      "conv3d_1 (Conv3D)            (None, 14, 14, 14, 32)    4032      \n",
-      "_________________________________________________________________\n",
-      "conv3d_2 (Conv3D)            (None, 12, 12, 12, 32)    27680     \n",
-      "_________________________________________________________________\n",
-      "max_pooling3d_1 (MaxPooling3 (None, 6, 6, 6, 32)       0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 6912)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               884864    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 258       \n",
-      "=================================================================\n",
-      "Total params: 916,834\n",
-      "Trainable params: 916,834\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "\n",
-      "./20180731-1623-pointnet-model.h5\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "reshape_1 (Reshape)          (None, 32, 32, 32, 1)     0         \n",
-      "_________________________________________________________________\n",
-      "conv3d_1 (Conv3D)            (None, 14, 14, 14, 32)    4032      \n",
-      "_________________________________________________________________\n",
-      "conv3d_2 (Conv3D)            (None, 12, 12, 12, 32)    27680     \n",
-      "_________________________________________________________________\n",
-      "max_pooling3d_1 (MaxPooling3 (None, 6, 6, 6, 32)       0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 6912)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               884864    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 258       \n",
-      "=================================================================\n",
-      "Total params: 916,834\n",
-      "Trainable params: 916,834\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "\n",
-      "Done.\n"
+      "Loading models...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'utils' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ca650c2c121d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Loading models...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel_name_voxnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_latest_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"voxnet\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mmodel_name_voxnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"20180804-0930-voxnet-model.h5\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_name_voxnet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'utils' is not defined"
      ]
     }
    ],
