Adds skel-notebook for VoxNet.

--- a/skel/06 - Train VoxNet.ipynb
+++ b/skel/06 - Train VoxNet.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train PointNet (https://arxiv.org/abs/1612.00593).\n",
+    "# Train VoxNet (http://dimatura.net/research/voxnet/).\n",
     "\n",
-    "This notebook shows you how to use the PreprocessedDataGenerator in order to train PointNet.\n",
-    "\n",
-    "The PreprocessedDataGenerator uses preprocessed-data instead of ETL-data. Wheras ETL-data comes mainly as PCD-files, preprocessed-data comes mainly as pointclouds stored as numpy-arrays. We identified PCD-loading as a bottleneck. "
+    "This notebook shows you how to use the ETLDataGenerator in order to train VoxNet. "
    ]
   },
   {
@@ -44,14 +42,14 @@
      "output_type": "stream",
      "text": [
       "WARNING! VTK not available. This might limit the functionality.\n",
-      "Using dataset path ../../data/preprocessed/2018_10_31_14_19_42\n"
+      "Using dataset path ../../data/etl/2018_10_31_14_19_42\n"
      ]
     }
    ],
    "source": [
-    "from cgmcore.preprocesseddatagenerator import get_dataset_path\n",
+    "from cgmcore.etldatagenerator import get_dataset_path\n",
     "\n",
-    "dataset_path = get_dataset_path(\"../../data/preprocessed\")\n",
+    "dataset_path = get_dataset_path(\"../../data/etl\")\n",
     "print(\"Using dataset path\", dataset_path)"
    ]
   },
@@ -98,16 +96,17 @@
     }
    ],
    "source": [
-    "from cgmcore.preprocesseddatagenerator import create_datagenerator_from_parameters\n",
+    "from cgmcore.etldatagenerator import create_datagenerator_from_parameters\n",
     "\n",
-    "dataset_parameters_pointclouds = {}\n",
-    "dataset_parameters_pointclouds[\"input_type\"] = \"pointcloud\"\n",
-    "dataset_parameters_pointclouds[\"output_targets\"] = [\"height\"]\n",
-    "dataset_parameters_pointclouds[\"random_seed\"] = random_seed\n",
-    "dataset_parameters_pointclouds[\"pointcloud_target_size\"] = 10000\n",
-    "dataset_parameters_pointclouds[\"pointcloud_random_rotation\"] = False\n",
-    "dataset_parameters_pointclouds[\"sequence_length\"] = 0\n",
-    "datagenerator_instance_pointclouds = create_datagenerator_from_parameters(dataset_path, dataset_parameters_pointclouds)"
+    "dataset_parameters_voxelgrids = {}\n",
+    "dataset_parameters_voxelgrids[\"input_type\"] = \"voxelgrid\"\n",
+    "dataset_parameters_voxelgrids[\"output_targets\"] = [\"height\"]\n",
+    "dataset_parameters_voxelgrids[\"random_seed\"] = random_seed\n",
+    "dataset_parameters_voxelgrids[\"voxelgrid_target_shape\"] = (32, 32, 32)\n",
+    "dataset_parameters_voxelgrids[\"voxel_size_meters\"] = 0.1\n",
+    "dataset_parameters_voxelgrids[\"voxelgrid_random_rotation\"] = False\n",
+    "dataset_parameters_voxelgrids[\"sequence_length\"] = 0\n",
+    "datagenerator_instance_voxelgrids = create_datagenerator_from_parameters(dataset_path, dataset_parameters_voxelgrids)"
    ]
   },
   {
@@ -116,7 +115,7 @@
    "source": [
     "# Getting the QR-Codes and do a train-validate-split.\n",
     "\n",
-    "The data-generator is perfectly capable of retrieving all QR-codes from the dataset. This snipped shows how to do so and how to split the QR-codes into two sets: Train and validate."
+    "The data-generator is perfectly capable of retrieving all QR-codes from the dataset. This snippet shows how to do so and how to split the QR-codes into two sets: Train and validate."
    ]
   },
   {
@@ -137,7 +136,7 @@
    ],
    "source": [
     "# Get the QR-codes.\n",
-    "qrcodes_to_use = datagenerator_instance_pointclouds.qrcodes[0:30]\n",
+    "qrcodes_to_use = datagenerator_instance_voxelgrids.qrcodes[0:30]\n",
     "\n",
     "# Do the split.\n",
     "random.seed(random_seed)\n",
@@ -167,8 +166,8 @@
    "outputs": [],
    "source": [
     "# Create python generators.\n",
-    "generator_pointclouds_train = datagenerator_instance_pointclouds.generate(size=batch_size, qrcodes_to_use=qrcodes_train)\n",
-    "generator_pointclouds_validate = datagenerator_instance_pointclouds.generate(size=batch_size, qrcodes_to_use=qrcodes_validate)"
+    "generator_voxelgrids_train = datagenerator_instance_voxelgrids.generate(size=batch_size, qrcodes_to_use=qrcodes_train)\n",
+    "generator_voxelgrids_validate = datagenerator_instance_voxelgrids.generate(size=batch_size, qrcodes_to_use=qrcodes_validate)"
    ]
   },
   {
@@ -182,20 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input-shape: (1, 10000, 3)\n",
+      "Input-shape: (1, 32, 32, 32)\n",
       "Output-shape: (1, 1)\n"
      ]
     }
    ],
    "source": [
-    "train_x, train_y = next(generator_pointclouds_train)\n",
+    "train_x, train_y = next(generator_voxelgrids_train)\n",
     "print(\"Input-shape:\", train_x.shape)\n",
     "print(\"Output-shape:\", train_y.shape)"
    ]
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,14 +230,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training PointNet.\n",
+    "# Training VoxNet.\n",
     "\n",
-    "The module modelutils contains methods for creating Neural Nets. The following code shows how to instantiate and train PointNet."
+    "The module modelutils contains methods for creating Neural Nets. The following code shows how to instantiate and train VoxNet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -255,78 +254,56 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 10000, 3)          0         \n",
+      "reshape_1 (Reshape)          (None, 32, 32, 32, 1)     0         \n",
       "_________________________________________________________________\n",
-      "lambda_1 (Lambda)            (None, 10000, 3)          0         \n",
+      "conv3d_1 (Conv3D)            (None, 14, 14, 14, 32)    4032      \n",
       "_________________________________________________________________\n",
-      "conv1d_4 (Conv1D)            (None, 10000, 64)         256       \n",
+      "conv3d_2 (Conv3D)            (None, 12, 12, 12, 32)    27680     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_6 (Batch (None, 10000, 64)         256       \n",
+      "max_pooling3d_1 (MaxPooling3 (None, 6, 6, 6, 32)       0         \n",
       "_________________________________________________________________\n",
-      "conv1d_5 (Conv1D)            (None, 10000, 64)         4160      \n",
+      "flatten_1 (Flatten)          (None, 6912)              0         \n",
       "_________________________________________________________________\n",
-      "batch_normalization_7 (Batch (None, 10000, 64)         256       \n",
+      "dense_1 (Dense)              (None, 128)               884864    \n",
       "_________________________________________________________________\n",
-      "lambda_2 (Lambda)            (None, 10000, 64)         0         \n",
-      "_________________________________________________________________\n",
-      "conv1d_9 (Conv1D)            (None, 10000, 64)         4160      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_13 (Batc (None, 10000, 64)         256       \n",
-      "_________________________________________________________________\n",
-      "conv1d_10 (Conv1D)           (None, 10000, 128)        8320      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_14 (Batc (None, 10000, 128)        512       \n",
-      "_________________________________________________________________\n",
-      "conv1d_11 (Conv1D)           (None, 10000, 1024)       132096    \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_15 (Batc (None, 10000, 1024)       4096      \n",
-      "_________________________________________________________________\n",
-      "max_pooling1d_3 (MaxPooling1 (None, 1, 1024)           0         \n",
-      "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 1, 64)             65600     \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_16 (Batc (None, 1, 64)             256       \n",
-      "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 1, 64)             0         \n",
-      "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 1, 1)              65        \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 1)                 0         \n",
+      "dense_2 (Dense)              (None, 1)                 129       \n",
       "=================================================================\n",
-      "Total params: 220,289\n",
-      "Trainable params: 217,473\n",
-      "Non-trainable params: 2,816\n",
+      "Total params: 916,705\n",
+      "Trainable params: 916,705\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/4\n",
-      "10/10 [==============================] - 7s 746ms/step - loss: 7976.4109 - mean_absolute_error: 88.9477 - val_loss: 2591.4444 - val_mean_absolute_error: 49.1856\n",
+      "10/10 [==============================] - 7s 691ms/step - loss: 3643.0556 - mean_absolute_error: 48.6309 - val_loss: 243.7696 - val_mean_absolute_error: 13.2198\n",
       "Epoch 2/4\n",
-      "10/10 [==============================] - 3s 323ms/step - loss: 8608.7625 - mean_absolute_error: 92.5845 - val_loss: 43925.3260 - val_mean_absolute_error: 156.2393\n",
+      "10/10 [==============================] - 5s 524ms/step - loss: 126.0748 - mean_absolute_error: 9.8629 - val_loss: 586.7372 - val_mean_absolute_error: 22.7178\n",
       "Epoch 3/4\n",
-      "10/10 [==============================] - 3s 323ms/step - loss: 7143.5371 - mean_absolute_error: 83.6282 - val_loss: 11154.3194 - val_mean_absolute_error: 99.7387\n",
+      "10/10 [==============================] - 5s 536ms/step - loss: 382.3545 - mean_absolute_error: 16.2496 - val_loss: 282.3252 - val_mean_absolute_error: 14.2785\n",
       "Epoch 4/4\n",
-      "10/10 [==============================] - 3s 323ms/step - loss: 8162.0071 - mean_absolute_error: 89.6840 - val_loss: 9427.9629 - val_mean_absolute_error: 93.8174\n"
+      "10/10 [==============================] - 6s 565ms/step - loss: 86.8677 - mean_absolute_error: 8.8110 - val_loss: 443.1273 - val_mean_absolute_error: 17.1146\n"
      ]
     }
    ],
    "source": [
     "from cgmcore import modelutils\n",
     "\n",
-    "input_shape = (dataset_parameters_pointclouds[\"pointcloud_target_size\"], 3)\n",
+    "input_shape = (32, 32, 32)\n",
     "output_size = 1\n",
-    "model_pointnet = modelutils.create_point_net(input_shape, output_size, hidden_sizes = [64])\n",
-    "model_pointnet.summary()\n",
-    "    \n",
-    "model_pointnet.compile(\n",
+    "model_voxnet = modelutils.create_voxnet_model_homepage(input_shape, output_size)\n",
+    "model_voxnet.summary()\n",
+    "\n",
+    "# Compile the model.\n",
+    "model_voxnet.compile(\n",
     "    optimizer=\"rmsprop\",\n",
     "    loss=\"mse\",\n",
     "    metrics=[\"mae\"]\n",
     "    )\n",
     "\n",
-    "history = model_pointnet.fit_generator(\n",
-    "    generator_pointclouds_train,\n",
+    "# Train the model.\n",
+    "history = model_voxnet.fit_generator(\n",
+    "    generator_voxelgrids_train,\n",
     "    steps_per_epoch=steps_per_epoch,\n",
     "    epochs=epochs,\n",
-    "    validation_data=generator_pointclouds_validate,\n",
+    "    validation_data=generator_voxelgrids_validate,\n",
     "    validation_steps=validation_steps\n",
     "    )"
    ]
@@ -342,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -350,17 +327,17 @@
      "output_type": "stream",
      "text": [
       "Saving model and history...\n",
-      "WARNING! Failed to save model. Use model-weights instead.\n",
-      "Saved model weights to./20181102-1208-pointnet-model-weights.h5\n",
-      "Saved training details to./20181102-1208-pointnet-details.p\n",
-      "Saved history to./20181102-1208-pointnet-history.p\n"
+      "Saved model to./20181102-1246-voxnet-model.h5\n",
+      "Saved model weights to./20181102-1246-voxnet-model-weights.h5\n",
+      "Saved training details to./20181102-1246-voxnet-details.p\n",
+      "Saved history to./20181102-1246-voxnet-history.p\n"
      ]
     }
    ],
    "source": [
     "output_path = \".\"\n",
     "\n",
-    "modelutils.save_model_and_history(output_path, model_pointnet, history, training_details, \"pointnet\")"
+    "modelutils.save_model_and_history(output_path, model_voxnet, history, training_details, \"voxnet\")"
    ]
   },
   {
