Adds network comparison to skel. Refactoring.

--- a/skel/06 - Train VoxNet.ipynb
+++ b/skel/06 - Train VoxNet.ipynb
@@ -273,13 +273,45 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/4\n",
-      "10/10 [==============================] - 7s 691ms/step - loss: 3643.0556 - mean_absolute_error: 48.6309 - val_loss: 243.7696 - val_mean_absolute_error: 13.2198\n",
+      "10/10 [==============================] - 9s 870ms/step - loss: 4821.9994 - mean_absolute_error: 59.2308 - val_loss: 165.7682 - val_mean_absolute_error: 11.1273\n",
       "Epoch 2/4\n",
-      "10/10 [==============================] - 5s 524ms/step - loss: 126.0748 - mean_absolute_error: 9.8629 - val_loss: 586.7372 - val_mean_absolute_error: 22.7178\n",
+      "10/10 [==============================] - 5s 519ms/step - loss: 230.6424 - mean_absolute_error: 12.3561 - val_loss: 280.3506 - val_mean_absolute_error: 13.2093\n",
       "Epoch 3/4\n",
-      "10/10 [==============================] - 5s 536ms/step - loss: 382.3545 - mean_absolute_error: 16.2496 - val_loss: 282.3252 - val_mean_absolute_error: 14.2785\n",
+      " 3/10 [========>.....................] - ETA: 1s - loss: 191.2405 - mean_absolute_error: 11.2892"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/tljh/user/lib/python3.6/site-packages/keras/callbacks.py:122: UserWarning: Method on_batch_end() is slow compared to the batch update (0.198777). Check your callbacks.\n",
+      "  % delta_t_median)\n",
+      "/opt/tljh/user/lib/python3.6/site-packages/keras/callbacks.py:122: UserWarning: Method on_batch_end() is slow compared to the batch update (0.100669). Check your callbacks.\n",
+      "  % delta_t_median)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 6s 552ms/step - loss: 129.9065 - mean_absolute_error: 9.9358 - val_loss: 215.1790 - val_mean_absolute_error: 11.2353\n",
       "Epoch 4/4\n",
-      "10/10 [==============================] - 6s 565ms/step - loss: 86.8677 - mean_absolute_error: 8.8110 - val_loss: 443.1273 - val_mean_absolute_error: 17.1146\n"
+      " 1/10 [==>...........................] - ETA: 1s - loss: 987.0907 - mean_absolute_error: 31.4180"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/tljh/user/lib/python3.6/site-packages/keras/callbacks.py:122: UserWarning: Method on_batch_end() is slow compared to the batch update (0.172569). Check your callbacks.\n",
+      "  % delta_t_median)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 5s 530ms/step - loss: 193.2374 - mean_absolute_error: 10.5516 - val_loss: 131.6181 - val_mean_absolute_error: 10.9393\n"
      ]
     }
    ],
@@ -327,10 +359,10 @@
      "output_type": "stream",
      "text": [
       "Saving model and history...\n",
-      "Saved model to./20181102-1246-voxnet-model.h5\n",
-      "Saved model weights to./20181102-1246-voxnet-model-weights.h5\n",
-      "Saved training details to./20181102-1246-voxnet-details.p\n",
-      "Saved history to./20181102-1246-voxnet-history.p\n"
+      "Saved model to./20181105-1134-voxnet-model.h5\n",
+      "Saved model weights to./20181105-1134-voxnet-model-weights.h5\n",
+      "Saved training details to./20181105-1134-voxnet-details.p\n",
+      "Saved history to./20181105-1134-voxnet-history.p\n"
      ]
     }
    ],
